--- a/WebContent/css/header.css
+++ b/WebContent/css/header.css
@@ -112,7 +112,7 @@
 	flex-direction: column;
   }
   
-  .menu-btn{
+  .header-menu-btn{
 	cursor: pointer;
     color: #8D8B8B;
     border: none;
@@ -120,7 +120,7 @@
     font-size: 16px;
   }
   
-  .menu-btn:hover{
+  .header-menu-btn:hover{
 	text-decoration: underline;
   }
  
