--- a/WebContent/css/menu.css
+++ b/WebContent/css/menu.css
@@ -17,13 +17,14 @@
   justify-content: space-around;
 }
 
-.menu-btn {
+.menubtn {
   color: #aaa;
   padding: 10px 20px;
   background-color: #1e1e1e;
   border-radius: 8px;
   text-decoration: none;
   border: none;
+  cursor: pointer;
 
   &:hover {
     background-color: #2e2e2e;
@@ -31,4 +32,17 @@
     color: #fff;
   }
   transition: 0.3s;
+}
+
+.active {
+    background-color: #2e2e2e;
+    color: #fff;
+}
+
+.libcontent {
+    display: none;
+}
+
+#playlist, #like, #artist{
+    display: none;
 }
